hikyuu/examples/web/hikyuu.readthedocs.io/en/latest/_sources/trade_sys/stoploss.rst.txt
.. py:currentmodule:: hikyuu.trade_sys
.. highlightlang:: python

止损/止赢策略
=============

常用止损/止赢策略
-----------------

止损是指买入后，价格的走势和预期相反，当价格低于某一水平时卖出，防止进一步的损失。
止赢是在买入后，价格符合预期走势，当价格回落至某一水平时卖出，获得足够的收益。
进行交易时，即可使用相同的止损和止赢策略，也可使用不同的止损和止赢策略，如使用固定百分比3%作为止损，使用吊灯安全线作为止赢。

固定百分比止损
^^^^^^^^^^^^^^

.. py:function:: ST_FixedPercent([p=0.03])

    固定百分比止损策略，即当价格低于买入价格的某一百分比时止损
    
    :param float p: 百分比(0,1]
    :return: 止损/止赢策略实例

技术指标止损
^^^^^^^^^^^^

.. py:function:: ST_Indicator(op[, kpart="CLOSE"])

    使用技术指标作为止损价。如使用10日EMA作为止损：::
    
        ST_Indicator(OP(EMA(n=10)))

    :param Operand op:
    :param string kpart: KDATA|OPEN|HIGH|LOW|CLOSE|AMO|VOL
    :return: 止损/止赢策略实例

亚历山大.艾尔德安全地带止损
^^^^^^^^^^^^^^^^^^^^^^^^^^^^    

.. py:function:: ST_Saftyloss([n1=10, n2=3, p=2.0])

    参见《走进我的交易室》（2007年 地震出版社） 亚历山大.艾尔德(Alexander Elder) P202
    计算说明：在回溯周期内（一般为10到20天），将所有向下穿越的长度相加除以向下穿越的次数，
    得到噪音均值（即回溯期内所有最低价低于前一日最低价的长度除以次数），并用今日
    最低价减去（前日噪音均值乘以一个倍数）得到该止损线。为了抵消波动并且保证止损线的
    上移，在上述结果的基础上再取起N日（一般为3天）内的最高值

    :param int n1: 计算平均噪音的回溯时间窗口，默认为10天
    :param int n2: 对初步止损线去n2日内的最高值，默认为3
    :param double p: 噪音系数，默认为2
    :return: 止损/止赢策略实例
    

自定义止损/止赢策略
-------------------

自定义止损/止赢策略接口：

* :py:meth:`SignalBase._calculate` - 【必须】子类计算接口
* :py:meth:`SignalBase._clone` - 【必须】克隆接口
* :py:meth:`SignalBase._reset` - 【可选】重载私有变量

止损/止赢策略基类
-----------------

.. py:class:: StoplossBase

    止损/止赢算法基类
    
    .. py:attribute:: name 名称
    
    .. py:method:: __init__(self[, name="StoplossBase"])
    
        :param str name: 名称
        
    .. py:method:: getParam(self, name)

        获取指定的参数
    
        :param str name: 参数名称
        :return: 参数值
        :raises out_of_range: 无此参数
        
    .. py:method:: setParam(self, name, value)
    
        设置参数
        
        :param str name: 参数名称
        :param value: 参数值
        :type value: int | bool | float | string
        :raises logic_error: Unsupported type! 不支持的参数类型

    .. py:method:: setTM(self, tm)
        
        设置交易管理实例
        
        :param TradeManager tm: 交易管理实例
        
    .. py:method:: getTM(self)
    
        获取交易管理实例
        
        :rtype: TradeManager
        
    .. py:method:: setTO(self, k)
    
        :param KData k: 设置交易对象
        
    .. py:method:: getTO(self)
    
        :return: 交易对象
        :rtype: KData
   
    .. py:method:: reset(self)
    
        复位操作
    
    .. py:method:: clone(self)
    
        克隆操作

    .. py:method:: getPrice(self, datetime, price)
    
        【重载接口】获取本次预期交易（买入）时的计划止损价格，如果不存在止损价，则返回0。用于系统在交易执行前向止损策略模块查询本次交易的计划止损价。
        
        .. note::
            一般情况下，止损/止赢的算法可以互换，但止损的getPrice可以传入计划交易的价格，比如以买入价格的30%做为止损。而止赢则不考虑传入的price参数，即认为price为0.0。实际上，即使止损也不建议使用price参数，如可以使用前日最低价的30%作为止损，则不需要考虑price参数。
        
        :param Datetime datetime: 交易时间
        :param float price: 计划买入的价格
        :return: 止损价格
        :rtype: float
        
    .. py:method:: _calculate(self)
    
        【重载接口】子类计算接口
    
    .. py:method:: _reset(self)
    
        【重载接口】子类复位接口，复位内部私有变量
    
    .. py:method:: _clone(self)
    
        【重载接口】子类克隆接口